--- a/index.html
+++ b/index.html
@@ -729,8 +729,8 @@ h2 {
   margin-top: 20px; /* テキストと次セクションの間隔 */
 }
 
-/* 支援プログラムボタン用（必要なら個別調整） */
-.pdf-section.self-buttons.program {
+/* 必要なら個別調整） */
+.pdf-section.self-buttons {
   margin-top: 5px; /* テキストとボタンの間を狭く */
 }
 
