--- a/index.html
+++ b/index.html
@@ -504,31 +504,31 @@ h2 {
 
 /* ================= 住所テキスト ================= */
 .access-text {
-  position: relative;
+  display: flex;
+  flex-direction: column;   /* 縦並び */
+  align-items: flex-start;  /* 左揃え */
   max-width: 550px;
-  margin: 0 auto 20px;
-  padding-left: 1.8em;
-
-  font-size: 1.3em;
-}
-
-/* ピンアイコン */
-.access-text::before {
-  content: "📍";
-  position: absolute;
-  left: 0;
-  top: 5px;
+  margin: 0 auto 20px;      /* セクション中央配置 */
   font-size: 1.3em;
 }
 
 /* 郵便番号 */
-.zip {
+.access-text .zip {
   font-size: 0.9em;
+  margin-bottom: 2px;
 }
 
-/* 住所行間 */
-.address {
+/* 住所 */
+.access-text .address {
   line-height: 1.3;
+  margin: 0;
+}
+
+/* ピンアイコン */
+.access-text .icon-wrapper {
+  display: flex;
+  align-items: center;      /* テキストとアイコンを縦中央揃え */
+  gap: 0.5em;               /* アイコンと文字の間隔 */
 }
 
 /* スマホ文字サイズ */
@@ -999,14 +999,13 @@ main {
       </div>
     </div>
 
-<h2 class="pc-title" id="access">アクセス</h2>
-<section class="access-section">
-  <p class="access-text">
-  <span class="zip">〒950-0861</span><br>
-  <span class="address">
-    新潟県新潟市東区中山6-19-5　ウェル新潟ビル206
-  </span>
-</p>
+<div class="access-text">
+  <div class="icon-wrapper">
+    <span>📍</span>
+    <span class="zip">〒123-4567</span>
+  </div>
+  <div class="address">新潟市東区○○町1-2-3</div>
+</div>
 
   <div class="map-wrapper">
     <iframe
