--- a/index.html
+++ b/index.html
@@ -999,13 +999,14 @@ main {
       </div>
     </div>
 
-<div class="access-text">
-  <div class="icon-wrapper">
-    <span>📍</span>
-    <span class="zip">〒123-4567</span>
-  </div>
-  <div class="address">新潟市東区○○町1-2-3</div>
-</div>
+<h2 class="pc-title" id="access">アクセス</h2>
+<section class="access-section">
+  <p class="access-text">
+    <span class="zip">〒950-0861</span><br>
+    <span class="address">
+      新潟県新潟市東区中山6-19-5　ウェル新潟ビル206
+    </span>
+  </p>
 
   <div class="map-wrapper">
     <iframe
