--- a/index.html
+++ b/index.html
@@ -210,12 +210,11 @@ h2 {
   .pc-title::before,
   .access-title::before,
   .contact-title::before {
-    content: "";          /* ::beforeを表示するために必要 */
-    display: block;       /* 横幅を持たせる */
-    height: 2px;          /* 線の太さ */
-    background-color: #000; /* 線の色 */
-    width: calc(100% - 50px); /* 右端を50px空ける */
-    margin-left: 0;       /* 左端は画面と揃える */
+    content: "";
+    display: block;
+    height: 3px;
+    background-color: #333; /* 元の色 */
+    margin-bottom: 10px;
   }
 }
   
