--- a/index.html
+++ b/index.html
@@ -210,11 +210,7 @@ h2 {
   .pc-title::before,
   .access-title::before,
   .contact-title::before {
-    content: "";
-    display: block;
-    height: 3px;
-    background-color: #333; /* 元の色 */
-    margin-bottom: 10px;
+    width: 75%;
   }
 }
   
