--- a/index.html
+++ b/index.html
@@ -1142,11 +1142,15 @@ main {
   </div>
 
   <!-- お問い合わせ｜プライバシーポリシー -->
-  <div class="footer-links">
-    <a href="#contact" class="footer-contact">お問い合わせ</a>
-    <span class="footer-sep">｜</span>
-    <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
+<div class="footer-links">
+  <div class="footer-contact">
+    <a href="#contact">お問い合わせ</a>
   </div>
+  <div class="footer-sep">｜</div>
+  <div class="footer-privacy">
+    <a href="privacy.html">プライバシーポリシー</a>
+  </div>
+</div>
 
   <!-- コピーライト -->
   <div class="footer-bottom">
