--- a/index.html
+++ b/index.html
@@ -846,20 +846,21 @@ footer {
 /* ================= フッターリンク ================= */
 .footer-links {
   display: flex;
-  justify-content: center;   /* 全体を中央に */
-  align-items: center;       /* 垂直方向中央揃え */
+  justify-content: center; /* 中央揃え */
+  align-items: center;
+  gap: 1em; /* 「｜」とリンクの間隔 */
 }
 
-.footer-contact {
-  margin-right: 10px;        /* セパレーターとの距離 */
+/* 左右リンクの距離を固定 */
+.left-link {
+  margin-right: 0.5em; /* ｜との距離 */
 }
 
-.footer-privacy {
-  margin-left: 10px;         /* セパレーターとの距離 */
+.right-link {
+  margin-left: 0.5em;  /* ｜との距離 */
 }
 
 .footer-sep {
-  text-align: center;
   font-weight: bold;
 }
 
@@ -1142,9 +1143,9 @@ main {
 
   <!-- お問い合わせ｜プライバシーポリシー -->
 <div class="footer-links">
-  <a href="#contact" class="footer-contact">お問い合わせ</a>
+  <a href="#contact" class="left-link">お問い合わせ</a>
   <span class="footer-sep">｜</span>
-  <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
+  <a href="privacy.html" class="right-link">プライバシーポリシー</a>
 </div>
 
   <!-- コピーライト -->
