--- a/index.html
+++ b/index.html
@@ -846,9 +846,18 @@ footer {
 /* ================= フッターリンク ================= */
 .footer-links {
   display: flex;
-  justify-content: center; /* 中央揃え */
   align-items: center;
   gap: 1em; /* 「｜」とリンクの間隔 */
+  position: relative;         /* 親要素を相対位置に */
+  justify-content: space-between; /* 左右にリンクを配置 */
+  max-width: 300px;           /* 左右リンクの合計幅 + 余白 */
+  margin: 0 auto;             /* センタリング */
+}
+
+.footer-links .footer-sep {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%); /* 完全中央に */
 }
 
 /* 左右リンクの距離を固定 */
