--- a/index.html
+++ b/index.html
@@ -849,16 +849,16 @@ footer {
   display: flex;
   justify-content: space-between; /* 左右のリンクを端に寄せる */
   align-items: center;
-  max-width: 300px;  /* 左右リンク+間隔の幅 */
+  max-width: 400px;
   margin: 0 auto;
 }
 
 .footer-links .footer-contact {
-  margin-right: 20px;  /* |との距離 */
+  margin-right: 40px;  /* |との距離 */
 }
 
 .footer-links .footer-privacy {
-  margin-left: 20px;   /* |との距離 */
+  margin-left: 40px;   /* |との距離 */
 }
 
 .footer-links .footer-sep {
