--- a/index.html
+++ b/index.html
@@ -846,14 +846,25 @@ footer {
 /* ================= フッターリンク ================= */
 .footer-links {
   display: flex;
-  justify-content: center;   /* コンテナ中央に配置 */
+  justify-content: center;  /* 全体を中央寄せ */
   align-items: center;
-  gap: 60px;                /* 左右リンクと｜の間隔 */
-  max-width: 400px;
-  margin: 0 auto;
 }
 
-.footer-links a {
+.footer-links .footer-contact {
+  margin-right: 20px; /* 「｜」までの距離 */
+}
+
+.footer-links .footer-sep {
+  margin: 0 10px;     /* 左右リンクとの距離 */
+}
+
+.footer-links .footer-privacy {
+  margin-left: 20px;  /* 「｜」までの距離 */
+}
+
+/* リンク色統一 */
+.footer-links a,
+.footer-links a:visited {
   color: #aaa;
   text-decoration: none;
 }
@@ -861,10 +872,6 @@ footer {
 .footer-links a:hover {
   color: #9F987D;
   text-decoration: underline;
-}
-
-.footer-links .footer-sep {
-  pointer-events: none;     /* 「｜」をクリック不可にする場合 */
 }
 
 /* ================= スマホ対応 ================= */
@@ -1115,11 +1122,11 @@ main {
   </div>
 
   <!-- お問い合わせ｜プライバシーポリシー -->
-<div class="footer-links">
-  <a href="contact.html">お問い合わせ</a>
-  <span class="footer-sep">|</span>
-  <a href="privacy.html">プライバシーポリシー</a>
-</div>
+  <div class="footer-links">
+    <a href="contact.html" class="footer-contact">お問い合わせ</a>
+    <span class="footer-sep">｜</span>
+    <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
+  </div>
 
   <!-- コピーライト -->
   <div class="footer-bottom">
