--- a/index.html
+++ b/index.html
@@ -860,9 +860,12 @@ footer {
   transform: translateX(-50%);
 }
 
-.footer-links .footer-contact,
+.footer-links .footer-contact {
+  margin-right: 30px; /* ｜との距離を調整 */
+}
+
 .footer-links .footer-privacy {
-  margin: 0;
+  margin-left: 30px;  /* ｜との距離を調整 */
 }
 
 /* リンク色統一 */
