--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ footer {
 }
 
 .footer-links .footer-contact {
-  align-items: right;
+  text-align: right;
   margin-right: 30px; /* ｜との距離を調整 */
 }
 
