--- a/index.html
+++ b/index.html
@@ -862,11 +862,12 @@ footer {
 
 .footer-links .footer-contact {
   text-align: right;
-  margin-right: 30px; /* ｜との距離を調整 */
+  margin-right: 15px; /* ｜との距離を調整 */
 }
 
 .footer-links .footer-privacy {
-  margin-left: 30px;  /* ｜との距離を調整 */
+  text-align: left;
+  margin-left: 15px;  /* ｜との距離を調整 */
 }
 
 /* リンク色統一 */
