--- a/index.html
+++ b/index.html
@@ -845,29 +845,26 @@ footer {
 
 /* ================= フッターリンク ================= */
 .footer-links {
-  display: flex;
-  justify-content: center; /* 中央寄せ */
-  align-items: center;
-  gap: 60px; /* 左右リンクの間隔 */
   position: relative;
-  max-width: 400px;
-  margin: 20px auto 0; /* 上下マージン調整 */
+  display: flex;
+  justify-content: center;  /* 真ん中寄せ */
+  align-items: center;
+  max-width: 400px;         /* フッター内の幅 */
+  margin: 20px auto 0;      /* 上下マージン */
 }
 
 .footer-links .footer-sep {
-  position: absolute;
+  position: absolute;       /* 画面真ん中に固定 */
   left: 50%;
   transform: translateX(-50%);
 }
 
 .footer-links .footer-contact {
-  text-align: right;
-  margin-right: 15px; /* ｜との距離を調整 */
+  margin-right: 30px;       /* ｜との距離を調整 */
 }
 
 .footer-links .footer-privacy {
-  text-align: left;
-  margin-left: 15px;  /* ｜との距離を調整 */
+  margin-left: 30px;        /* ｜との距離を調整 */
 }
 
 /* リンク色統一 */
@@ -882,9 +879,9 @@ footer {
   text-decoration: underline;
 }
 
-/* 住所・電話・メール */
+/* ================= 住所・連絡先 ================= */
 .footer-address {
-  max-width: 320px;
+  max-width: 400px;
   margin: 0 auto;
   text-align: left;
   font-size: 14px;
@@ -897,7 +894,7 @@ footer {
   margin: 2px 0;
 }
 
-/* コピーライト */
+/* ================= コピーライト ================= */
 .footer-copy {
   font-size: 12px;
   text-align: center;
@@ -915,8 +912,34 @@ footer {
     margin: 0 auto;
   }
 
+  .zip {
+    display: block;
+  }
+
+  .footer-address a,
+  .footer-tel,
+  .footer-mail {
+    display: block;
+    margin: 2px 0;
+  }
+
+  /* フッターリンクもPCと同じ見え方に統一 */
   .footer-links {
-    gap: 40px; /* 間隔調整 */
+    max-width: 320px;
+    margin: 20px auto 0;
+  }
+
+  .footer-links .footer-contact {
+    margin-right: 20px;
+  }
+
+  .footer-links .footer-privacy {
+    margin-left: 20px;
+  }
+
+  .footer-copy {
+    font-size: 12px;
+    margin-top: 5px;
   }
 }
 
@@ -1141,7 +1164,7 @@ main {
   <!-- お問い合わせ｜プライバシーポリシー -->
   <div class="footer-links">
     <a href="contact.html" class="footer-contact">お問い合わせ</a>
-    <span class="footer-sep">｜</span>
+    <span class="footer-sep">|</span>
     <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
   </div>
 
