--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ footer {
 .footer-links {
   position: relative;
   display: flex;
-  justify-content: center;  /* 全体中央寄せ */
+  justify-content: space-between;
   align-items: center;
   max-width: 600px;
   margin: 20px auto 0;
