--- a/index.html
+++ b/index.html
@@ -845,46 +845,22 @@ footer {
 
 /* ================= フッターリンク ================= */
 .footer-links {
-  position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* 全体中央寄せ */
   align-items: center;
-  max-width: 600px;
+  gap: 40px; /* 左右リンク間隔 */
   margin: 20px auto 0;
-  gap: 40px;
+  max-width: 500px; /* 画面幅に合わせて調整 */
 }
 
 .footer-links .footer-sep {
-  position: absolute;       /* 画面中央に固定 */
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-/* 左右リンクを｜を基準に中央寄せ */
-.footer-links .footer-contact,
-.footer-links .footer-privacy {
-  display: inline-block;
-  width: 100px;            /* 固定幅で文字の位置調整 */
-  text-align: center;      /* 文字中央寄せ */
-}
-
-.footer-links .footer-contact {
-  margin-right: 5px;      /* ｜との距離 */
-}
-
-.footer-links .footer-privacy {
-  margin-left: 5px;       /* ｜との距離 */
+  /* flexで自動配置するので特に絶対位置は不要 */
 }
 
 .footer-links a {
-    white-space: nowrap; /* 改行させない */
-}
-
-/* リンク色 */
-.footer-links a,
-.footer-links a:visited {
-  color: #aaa;
+  white-space: nowrap; /* 改行防止 */
   text-decoration: none;
+  color: #aaa;
 }
 
 .footer-links a:hover {
@@ -897,49 +873,32 @@ footer {
   footer {
     font-size: 14px;
   }
-  
-  /* 住所・郵便番号・建物名を縦並びに */
+
+  /* 住所改行 */
   .footer-address {
-    max-width: 320px;   /* 幅調整 */
+    max-width: 360px; /* スマホ幅に調整 */
     margin: 0 auto;
     text-align: left;
-    line-height: 1.4;   /* 行間を少し広げて読みやすく */
   }
 
-  .footer-address .zip {
-    display: block;     /* 郵便番号を改行 */
-  }
-
-  /* 建物名も改行したい場合はspanで囲んで display:block */
+  .footer-address .zip,
   .footer-address a {
-    display: block;     /* 全体をブロック化して改行 */
-  }
-
-  .footer-address a br {
-    display: block;     /* brタグが使える場合は確実に改行 */
+    display: block; /* 郵便番号と住所を改行 */
   }
 
   .footer-address a,
   .footer-tel,
   .footer-mail {
-    display: block;
     margin: 2px 0;
-  
-  .footer-links {
-    max-width: 320px;
-    margin: 20px auto 0;
+    display: block;
   }
 
-  .footer-links .footer-contact,
-  .footer-links .footer-privacy {
-    width: 80px;           /* スマホ用に少し狭く */
-    margin: 0 10px;
-  }
-  
-  .footer-links, 
-   footer-copy {
+  /* コピーライト */
+  .footer-copy {
     font-size: 12px;
-  }
+    margin-top: 2px;
+    text-align: center;
+  
 }
 
   
@@ -1150,11 +1109,9 @@ main {
       <span class="zip">〒950-0861</span>
       新潟県新潟市東区中山6-19-5 ウェル新潟ビル206
     </a>
-
     <span class="footer-tel">
       <a href="tel:0252907625">TEL：025-290-7625</a>
     </span>
-
     <span class="footer-mail">
       <a href="mailto:noir.niigata@gmail.com">MAIL：noir.niigata@gmail.com</a>
     </span>
