--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ h2 {
 .contact-form {
   display: none;
   max-width: 900px;
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
   padding: 0 20px;
 
   background: rgba(255,255,255,0.75);
