--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ h2 {
   position: absolute;
   bottom: -1px;
   left: 0;/* 左からスタート */
-  width: 75%;
+  width: 65%;
   height: 0.8em;
 
   background: rgba(169,169,169,0.25);
@@ -819,6 +819,12 @@ footer {
 
 .footer-address a:hover {
   text-decoration: underline;
+}
+
+.footer-address > a {
+  display: block;
+  margin-bottom: 6px;
+  line-height: 1.3;
 }
 
 .footer-tel, .footer-mail {
