--- a/index.html
+++ b/index.html
@@ -872,6 +872,10 @@ footer {
   user-select: none;
 }
 
+.footer-links .footer-privacy {
+  margin-left: 16px;
+}
+
 /* ================= スマホ対応 ================= */
 @media (max-width: 768px) {
   footer {
