--- a/index.html
+++ b/index.html
@@ -594,42 +594,12 @@ h2 {
 }
   
 /* =================================================
-   お問い合わせ
+   お問い合わせ（フォーム全体）
 ================================================= */
-.contact-cta {
-  text-align: center;
-  margin: 50px 0 60px;
-  position: relative;
-  z-index: 1;
 
-  display: block;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-}
-
-/* CTAリンク */
-.contact-cta a {
-  display: inline-block;
-  padding: 10px 18px;
-  font-size: 18px;
-
-  color: #9F987D;
-  background: rgba(255,255,255,0.6);
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  text-decoration: none;
-
-  transition: all 0.3s ease;
-}
-
-.contact-cta a:hover {
-  background: #b5a695;
-  color: #fff;
-  transform: translateY(-2px);
-}
-
-/* ================= フォーム全体 ================= */
+/* フォーム表示エリア */
 .contact-form {
-  display: none;
+  display: none;              /* 初期は非表示 */
   max-width: 900px;
   margin: 0 auto 10px;
   padding: 0 20px;
@@ -638,26 +608,31 @@ h2 {
   border-radius: 15px;
 }
 
+/* トグルで表示 */
 .contact-form.show {
   display: block;
 }
 
-/* iframeは親にフィット */
+/* Googleフォーム（iframe） */
 .contact-form iframe {
   width: 100%;
   border: none;
 }
 
-/* ================= お問い合わせトグルボタン ================= */
+
+/* =================================================
+   お問い合わせ トグルボタン
+================================================= */
+
 .toggle-button-contact {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
 
-  font-size: 18px;
-  padding: 10px 18px;
   margin: 0 auto 15px;
+  padding: 10px 18px;
+  font-size: 18px;
 
   border-radius: 10px;
   border: 1px solid #ccc;
@@ -672,8 +647,8 @@ h2 {
 .arrow-contact {
   font-family: 'Kiwi Maru', cursive;
   font-size: 0.7em;
-
   display: inline-block;
+
   transform: scaleX(2);
   transition: transform 0.4s ease;
 }
@@ -682,20 +657,27 @@ h2 {
   transform: scaleX(2) rotate(180deg);
 }
 
-/* ================= スマホ調整 ================= */
+
+/* =================================================
+   送信後メッセージ（補足表示）
+================================================= */
+
+.thanks-message {
+  margin-top: 30px;
+  text-align: center;
+  color: #777;
+  font-size: 0.95rem;
+}
+
+
+/* =================================================
+   スマホ調整
+================================================= */
+
 @media (max-width: 480px) {
-
-  .contact-cta a {
-    width: 65%;
-    padding: 10px 5px;
+  .toggle-button-contact {
     font-size: 16px;
-  }
-
-  .contact-title {
-    display: block;
-    text-align: center;
-    margin-top: 70px;
-    margin-bottom: 20px;
+    padding: 10px 14px;
   }
 }
   
@@ -873,7 +855,7 @@ footer {
 }
 
 .footer-links .footer-privacy {
-  margin-left: 16px;
+  margin-left: 40px;
 }
 
 /* ================= スマホ対応 ================= */
@@ -1071,6 +1053,15 @@ main {
 <section id="contact-section" class="contact-form">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
   </iframe>
+
+  <div class="thanks-message">
+    <h2>お問い合わせありがとうございます</h2>
+    <p>
+      内容を確認後、<br>
+      担当者よりご連絡いたします。
+    </p>
+  </div>
+  
 </section>
 
 <h2 class="pc-title" id="pdf">サービス自己評価表(PDF)</h2>
