--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@ h2 {
 .pdf-section {
   text-align: center;
   font-family: 'M PLUS Rounded 1c', sans-serif;
+  display: none;
 }
 
 /* PDF説明文 */
