--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,9 @@ main {
   
 </section>
 
-<!--
+<!-- ===== PDFセクション（2025年度は非表示） =====
+<section class="pdf-wrapper">
+     
 <h2 class="pc-title" id="pdf">サービス自己評価表(PDF)</h2>
 
 <!-- ① 文章① -->
@@ -1095,6 +1097,8 @@ main {
     支援プログラム
   </a>
 </div>
+     
+</section>
 -->
   
 </main>
