--- a/index.html
+++ b/index.html
@@ -864,6 +864,7 @@ footer {
     max-width: 360px;
     margin: 0 auto;
     text-align: left;
+    padding-left: 20px;
   }
 
   .footer-address .zip,
@@ -892,6 +893,16 @@ footer {
 
   .footer-links .footer-sep {
     font-size: 14px;
+  }
+
+  /* 左：お問い合わせ */
+  .footer-links .footer-contact {
+    margin-right: 30px;   /* | からの距離（左右共通） */
+  }
+
+  /* 右：プライバシーポリシー */
+  .footer-links .footer-privacy {
+    margin-left: 30px;    /* | からの距離（左右共通） */
   }
 }
 
