--- a/index.html
+++ b/index.html
@@ -857,6 +857,7 @@ footer {
 @media (max-width: 768px) {
   footer {
     font-size: 14px;
+    text-align: center;
   }
 
   /* 住所を中央寄せではなく改行して左揃え */
@@ -864,7 +865,7 @@ footer {
     max-width: 360px;
     margin: 0 auto;
     text-align: left;
-    padding-left: 20px;
+    display: inline-block;
   }
 
   .footer-address .zip,
