--- a/index.html
+++ b/index.html
@@ -510,11 +510,8 @@ h2 {
 /* ================= 住所テキスト ================= */
 .access-text {
   display: flex;
-  flex-direction: column;   /* 縦並び */
-  align-items: flex-start;  /* 左揃え */
-
-  max-width: 550px;
-  margin: 0 auto 20px;      /* ブロックは中央配置 */
+  justify-content: center;   /* ブロック自体は中央 */
+  margin: 0 auto 20px;
 
   font-size: 1.3em;
   line-height: 1.3;
@@ -524,22 +521,28 @@ h2 {
   -webkit-user-select: none;
 }
 
-/* ===== ピン＋郵便番号（1行） ===== */
+/* ===== 中身ラッパー ===== */
+.icon-wrapper {
+  display: flex;
+  flex-direction: column;    /* 縦並び */
+  align-items: flex-start;   /* 文字は左揃え */
+  gap: 0.15em;               /* ← 行間はここで調整 */
+}
+
+/* ===== 📍＋郵便番号 ===== */
 .pin-line {
   display: flex;
   align-items: center;
-  gap: 0.3em;               /* 📍と〒の間隔 */
-  margin-bottom: 2px;
+  gap: 0.3em;
 }
 
 /* ピン */
 .pin {
-  font-size: 1em;
   line-height: 1;
 }
 
 /* 郵便番号 */
-.access-text .zip {
+.zip {
   font-size: 0.9em;
   line-height: 1.2;
   color: #635656;
@@ -547,42 +550,23 @@ h2 {
 }
 
 /* ===== 住所 ===== */
-.access-text .address {
-  line-height: 1.3;
+.address {
   margin: 0;
+  line-height: 1.3;
 }
 
-/* ===== 全体ラッパー ===== */
-.access-text .icon-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.1em;               /* 行間の微調整 */
+/* ===== スマホだけ住所改行 ===== */
+.sp-br {
+  display: none;
 }
-  
-/* スマホ文字サイズ */
+
 @media (max-width: 480px) {
   .access-text {
     font-size: 1em;
   }
 
-  /* スマホだけ改行を有効化 */
   .sp-br {
     display: inline;
-  }
-}
-
-/* デフォルトでは非表示（PCで改行されないように） */
-.sp-br {
-  display: none;
-}
-
-/* タイトル（スマホ） */
-@media (max-width: 480px) {
-  .access-title {
-    display: block;
-    text-align: center;
-    margin-bottom: 20px;
   }
 }
 
