--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ h2 {
   display: flex;
   align-items: center;
   gap: 0.3em;
-  margin-left: -1em;
+  margin-left: -3em;
 }
 
 /* ピン */
@@ -775,6 +775,10 @@ footer {
 }
 
 /* 住所・TEL・MAIL */
+footer .zip {
+  color: #aaa;
+}
+  
 .footer-address {
   line-height: 1.2;
   margin-bottom: 20px;
