--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ h2 {
 
 /* ロゴ画像 */
 .logo-img {
-  width: 100px;
-  height: auto;
-  display: block;
+  height: 100%;
+  max-height: 100px;
+  width: auto;
 }
 
 /* ===== スマホだけ並びを逆にする ===== */
