--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ header {
   top: 0;
   z-index: 1000;
   height: 80px;
+  width: 100%;
 }
 
 h2 {
@@ -59,7 +60,7 @@ h2 {
   max-width: 1100px;
   margin: 0 auto;
 
-  display: grid;
+  display: flex;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   column-gap: clamp(12px, 4vw, 40px);
