--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 ================================================= */
 header {
   background-color: rgba(169,169,169,0.5);
-  padding: clamp(12px, 3vw, 32px) clamp(8px, 4vw, 24px);
+  padding: 12px 0;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -59,11 +59,9 @@ h2 {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-
   display: flex;
-  grid-template-columns: auto 1fr auto;
   align-items: center;
-  column-gap: clamp(12px, 4vw, 40px);
+  justify-content: space-between;
 }
 
 /* ===== ロゴ全体（共通） ===== */
@@ -137,71 +135,82 @@ h2 {
 /* ================= タブレット以下 ================= */
 @media (max-width: 1024px) {
   .header-inner {
-    grid-template-columns: minmax(0, 1fr) auto;
-    column-gap: 20px;
+    justify-content: space-between;
   }
 }
 
 /* ================= スマホ ================= */
 @media (max-width: 480px) {
-
   header {
-    padding: 12px;
+    padding: 12px 0;       /* 左右は header-inner に任せる */
+    height: 80px;
   }
 
   .header-inner {
-    grid-template-columns: 1fr auto;
+    padding: 0 16px;       /* 左右余白はここ */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  /* ロゴ・タイトル左寄せ */
-  .logo,
+  /* ロゴ＋補足文 */
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
+  /* ロゴ画像 */
+  .logo-img {
+    height: 48px;
+    width: auto;
+  }
+
+  /* 中央タイトル */
   .header-center {
-    grid-column: 1;
-    text-align: left;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.1rem;
+    white-space: nowrap;
+    pointer-events: none; /* タップ誤爆防止 */
   }
 
-  .header-center {
-    font-size: 1.2em;
-    line-height: 1.3;
-  }
-
-  /* ☰ */
+  /* ☰ ボタン */
   .menu-toggle {
     display: block;
-    grid-column: 2;
-    justify-self: end;
+    font-size: 26px;
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
   }
 
-  /* メニュー本体 */
+  /* メニュー */
   .menu {
     position: absolute;
     top: 100%;
     right: 0;
-
-    width: 40%;
-    max-width: 240px;
-
-    display: none !important;
-    background: rgba(169,169,169,0.9);
+    width: 60%;
+    max-width: 260px;
+    background: rgba(169,169,169,0.95);
     padding: 14px 16px;
-    text-align: left;
+    display: none;
   }
 
   .menu.show {
-    display: block !important;
+    display: block;
   }
 
   .menu a {
     display: block;
     padding: 10px 0;
-    font-size: 1.05em;
-  }
-
-  .menu a:not(:last-child) {
-    border-bottom: 1px solid rgba(255,255,255,0.25);
+    font-size: 1em;
+    color: #fff;
+    text-decoration: none;
   }
 }
-
+  
 /* ===============================
    PC用タイトル
 =============================== */
